tests/NormalTests/paczka1/fuzzy1/20364495.err
Error in line 2: b9eE0 A190 62,9
Error in line 3: b9eE0 A24 26,0
Error in line 6: BDEJUdH A66 37,3
Error in line 7: b9eE0 A190 93,0
Error in line 12: b9eE0 A66 69,7
Error in line 9: meIFtae A190 26,9
Error in line 23: meIFtae S471 49,1
Error in line 24: meIFtae A24 14,9
Error in line 29: meIFtae S471 22,9
Error in line 32: meIFtae A24 99,4
